static/styles/left_sidebar.css
/* ... */
#streams_inline_icon,
.streams_filter_icon {
    float: right;
    opacity: 0.5;
    padding: 3px;
    margin-left: 4px;

    &:hover {
        opacity: 1;
        cursor: pointer;
    }
}

.streams_inline_icon_wrapper {
    float: right;
}

.streams_filter_icon.web_public {
    margin-right: 10px;
}

#streams_inline_icon {
    margin-right: 8px;
}

.tooltip {
    max-width: 18em;
}

#stream_filters {
    overflow: visible;
    margin-bottom: 5px;
    margin-right: 12px;
    padding: 0;
    font-weight: normal;

    .input-append.topic_search_section,
    .tab-switcher {
        padding: 2px 0 2px calc($topic_indent - $topic_resolve_width);
        margin-bottom: 3px;
        margin-left: 3px;
    }

    .input-append.topic_search_section input {
        width: calc(100% - 30px);
    }

    .tab-switcher {
        display: flex;
        font-size: 80%;
    }

    li {
        a:hover {
            text-decoration: none;
        }

        ul {
            margin-left: 0;

            &.topic-list li {
                padding: 2px 0 2px calc($topic_indent - $topic_resolve_width);

                &.filter-topics {
                    padding-bottom: 0;
                    position: sticky;
                    top: calc($sections_vertical_gutter + 43px);
                    z-index: 2;
                    background-color: hsl(0, 0%, 100%);
                }
            }
        }
    }

    .subscription_block .unread_count {
        margin-right: 15px;
    }

    .subscription_block {
        margin-right: 25px;
        margin-left: $far_left_gutter_size;
        display: flex;
        align-items: center;
        white-space: nowrap;

        &.stream-with-count {
            margin-right: 15px;
        }
    }

    .inactive_stream {
        opacity: 0.5;
    }

    .toggle_stream_mute {
        margin-right: 3px;
        opacity: 0.5;

        &:hover {
            opacity: 1;
        }
    }
}

.narrows_panel {
    li a {
        margin-top: 1px;

        &:hover {
            text-decoration: none;
        }
    }
}

#left_sidebar_scroll_container {
    outline: none;
    overflow-x: hidden;
    overflow-y: auto;
    position: relative;
    z-index: 0;
    width: 100%;
}

.private_messages_container {
    background: hsl(0, 0%, 100%);
    margin-right: 16px;
    margin-left: 6px;
    z-index: 1;

    #toggle_private_messages_section_icon {
        opacity: 0.7;
        margin-left: -15px;
        min-width: 12px;

        &.fa-caret-right {
            position: relative;
            left: 3px;
        }

        &:hover {
            opacity: 1;
        }
    }

    #private_messages_section_header {
        cursor: pointer;
        padding: 0 10px 1px 6px;
        white-space: nowrap;

        #show_all_private_messages {
            right: 0;
            float: right;
            position: absolute;
            opacity: 0.7;
            text-decoration: none;
            color: inherit;
            margin-right: 21px;
            margin-top: 1px;

            &:hover {
                opacity: 1;
            }
        }

        .unread_count {
            margin-right: 16px;
            margin-top: 2px;
        }
    }

    ul.pm-list {
        list-style-type: none;
        font-weight: 400;
        margin-left: 0;
        margin-bottom: 0;

        span.fa-group {
            font-size: 90%;
        }

        li.pm-list-item {
            position: relative;
            padding: 1px 10px 1px 4px;
            margin-left: 2px;

            a {
                text-decoration: none;
                color: inherit;
            }

            .pm_left_col {
                min-width: $left_col_size;
            }
        }

        li#show_more_private_messages {
            cursor: pointer;
            padding-right: 26px;
            padding-left: 6px;

            a {
                font-size: 12px;
            }

            .unread_count {
                margin-top: 2px;
            }
        }
    }
}

.active_private_messages_section {
    #private_messages_section,
    #private_messages_list,
    #hide_more_private_messages {
        background-color: hsl(202, 56%, 91%);
    }

    #private_messages_section {
        border-radius: 4px 4px 0 0;
    }

    #private_messages_list {
        border-radius: 0 0 4px 4px;
    }

    #more_private_messages_sidebar_title {
        font-weight: 600;
    }
}

:not(.active-sub-filter) {
    &.top_left_row:hover,
    &.bottom_left_row:hover,
    &#stream_filters li.highlighted_stream {
        background-color: hsla(120, 12.3%, 71.4%, 0.38);
        border-radius: 4px;
    }
}

#login-link-container,
#subscribe-to-more-streams {
    text-decoration: none;
    margin: 5px auto 5.5px 10px;
    margin-bottom: $bottom_scrolling_buffer;

    i {
        min-width: 19px;
        text-align: center;

        &::before {
            padding-right: 3px;
        }
    }
}

ul.filters {
    list-style-type: none;
    margin-left: 0;

    a {
        color: inherit;
    }

    hr {
        margin-top: 10px;
        margin-bottom: 10px;
    }

    li.muted_topic,
    li.out_of_home_view {
        opacity: 0.5;
    }

    li.out_of_home_view {
        &:hover {
            opacity: 0.75;
        }

        li.muted_topic {
            /* If stream is muted, this resets opacity of muted topics in muted
            stream to 1; since opacity is multiplied down through child
            elements, this avoids an unreadably low opacity. */
            opacity: 1;
        }
    }
}

li.active-filter,
li.active-sub-filter {
    font-weight: 600 !important;
    background-color: hsl(202, 56%, 91%);
    position: relative;
    border-radius: 4px;
}

#stream_filters .narrow-filter.active-filter {
    .topic-list .filter-topics,
    > .bottom_left_row {
        background-color: hsl(202, 56%, 91%);
        border-radius: 4px;
    }
}
/* ... */

